--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,25 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<!--    Bootstrap CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+<!--    FontAwesome-->
     <script src="https://use.fontawesome.com/405b0be7d3.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!--    Custom CSS-->
     <link rel="stylesheet" href="style.css">
-
-    <!-- jQuery Form, Additional Methods, Validate -->
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
-    <!-- Your JavaScript Form Validator -->
-    <script src="js/form-validate.js"></script>
-    <!-- Google reCAPTCHA -->
-
 
     <title>Narro Wood Working</title>
 
@@ -218,36 +211,39 @@
         <h3 class="ml-5 mb-3">
             <span>Contact</span>
         </h3>
-        <form id="contact-form" action="php/mailer.php" method="post" novalidate="novalidate">
+        <form id="contact-form" action="http://localhost:4200/apis/" method="post" novalidate="novalidate">
             <!--                name line-->
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="form-group">
+                            <label for="name" class="sr-only"></label>
                             <div class="input-group">
                                 <div class="input-group-addon">
                                     <i class="fa fa-user fa-fw" aria-hidden="true"></i>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Your Name">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
                             </div>
                         </div>
                             <!--                email address-->
                             <div class="form-group">
+                                <label for="email" class="sr-only"></label>
                             <div class="input-group">
                                 <div class="input-group-addon">
                                     <i class="fa fa-envelope fa-fw" aria-hidden="true"></i>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Your Email">
+                                <input type="text" class="form-control" id="email" name="email" placeholder="Your Email">
                             </div>
                         </div>
 
-
+                        <!--        phone number-->
                         <div class="form-group">
+                            <label for="phone" class="sr-only"></label>
                             <div class="input-group">
                                 <div class="input-group-addon">
                                     <i class="fa fa-phone-square fa-fw" aria-hidden="true"></i>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Your Number">
+                                <input type="text" class="form-control" id="phone" name="phone" placeholder="Your Number">
                             </div>
                         </div>
                     </div>
@@ -255,11 +251,12 @@
                     <div class="col-lg-6">
                         <!--                message box-->
                         <div class="form-group">
+                            <label for="message" class="sr-only"></label>
                             <div class="input-group">
                                 <div class="input-group-addon">
                                     <i class="fa fa-comment fa-fw" aria-hidden="true"></i>
                                 </div>
-                                <textarea class="form-control" rows="5"
+                                <textarea class="form-control" id="message" maxlength="2000" name="message" required rows="5"
                                           placeholder="What can I make for you?"></textarea>
                             </div>
                         </div>
@@ -267,18 +264,7 @@
                 </div>
             </div>
             <!-- reCAPTCHA -->
-            <div class="g-recaptcha mb-3 row justify-content-center" data-sitekey="6Len6C4UAAAAALlI_mfpckSkYBVIoGBToYG9B2W6">
-                <div style="width: 304px; height: 78px;">
-                    <div>
-                        <iframe src="https://www.google.com/recaptcha/api2/anchor?ar=2&amp;k=6Len6C4UAAAAALlI_mfpckSkYBVIoGBToYG9B2W6&amp;co=aHR0cHM6Ly9jdXN0b21kZXB0LmNvbTo0NDM.&amp;hl=en&amp;v=_KUxfxvAoJ4k7SaKyLbja4Mi&amp;size=normal&amp;cb=vlmwzci86qmz"
-                                width="310" height="78" role="presentation" name="a-eyxe4awkgfp3" frameborder="0"
-                                scrolling="no"
-                                sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"></iframe>
-                    </div>
-                    <textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response"
-                              style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0; resize: none; display: none;"></textarea>
-                </div>
-                <iframe style="display: none;"></iframe>
+            <div class="g-recaptcha mb-3 row justify-content-center" data-sitekey="6LdXUVQaAAAAAC6cCJfSZs9A4EU-n-R3Re7m8jPu">
             </div>
             <!--empty area for form error/success output-->
             <div class="row mt-2">
@@ -315,9 +301,7 @@
     </div>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
@@ -327,6 +311,19 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"
         integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g=="
         crossorigin="anonymous"></script>
-<script src="script.js"></script>
+
+<!-- jQuery Form, Additional Methods, Validate -->
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
+<!-- Your JavaScript Form Validator -->
+    <script src="script.js"></script>
+<!-- Google reCAPTCHA -->
+<script src='https://www.google.com/recaptcha/api.js'></script>
+
+
 </body>
 </html>
